examples/test/testpolicy13858.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13858
  namespace: namespace228
spec:
  podSelector:
    matchLabels:
      key7: value48
      key11: value16
      key42: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value13
      podSelector:
        matchLabels:
          key25: value3
